--- a/index.html
+++ b/index.html
@@ -5,13 +5,23 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Зал памяти Дмитрия Галяудина</title>
         <link rel="stylesheet" href="/css/main.css">
-        <p>27 февраля 2024 года в 08:00 в собственной квартире города Полярные Зори умер Галяудинов Дмитрий также известный под псевдонимом Иван Ананас, помним скорбим</p>
+        <р>27 февраля 2024 года в 08:00 в собственной квартире города Полярные Зори умер Галяудинов Дмитрий также известный под псевдонимом Иван Ананас, помним скорбим</p>
 
     </head>
 
     <body>
-        <img src="/photos/photo.png" alt="Дмитрий Галяудинов" width="480" height="640" />
-        <img src="/photos/photo2.jpg" alt="Дмитрий Галяудинов" width="480" height="640"/>
+        <header class="container">
+            <span class="logo">logo</span>
+            <nav>
+                <ul>
+                    <li class="active"><a href="#">Home</a></li>
+                </ul>
+            </nav>
+        </header>
+        <div class="wrapper">
+            <img src="/photos/photo.png" alt="Дмитрий Галяудинов" width="480" height="640" />
+            <img src="/photos/photo2.jpg" alt="Дмитрий Галяудинов" width="480" height="640"/>
+        </div>
 
     </body>
 </html>
