Photo commit     more photo

--- a/index.html
+++ b/index.html
@@ -5,23 +5,30 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Зал памяти Дмитрия Галяудина</title>
         <link rel="stylesheet" href="/css/main.css">
-        <р>27 февраля 2024 года в 08:00 в собственной квартире города Полярные Зори умер Галяудинов Дмитрий также известный под псевдонимом Иван Ананас, помним скорбим</p>
+        <h2>27 февраля 2024 года в 08:00 в собственной квартире города Полярные Зори умер Галяудинов Дмитрий также известный под псевдонимом Иван Ананас, помним скорбим</h2>
+        <p></p>
+        <figcaption>Когда узнал что Дмитрий Галяудинов умер</figcaption>
 
     </head>
+    <style>
+       .sign figcaption 
+       {
+        margin: 0 auto 5px; /* Отступы вокруг абзаца */
+       }
+    </style>
 
     <body>
-        <header class="container">
-            <span class="logo">logo</span>
-            <nav>
-                <ul>
-                    <li class="active"><a href="#">Home</a></li>
-                </ul>
-            </nav>
-        </header>
         <div class="wrapper">
             <img src="/photos/photo.png" alt="Дмитрий Галяудинов" width="480" height="640" />
             <img src="/photos/photo2.jpg" alt="Дмитрий Галяудинов" width="480" height="640"/>
-        </div>
+            <img src="/photos/photo3.jpg" alt="Дмитрий Галяудинов" width="480" height="640"/>
+            <img src="/photos/photo4.jpg" alt="Дмитрий Галяудинов" width="480" height="640"/>
+            <figure class="sign">
+                <img src="/photos/photoSad.jpg" alt="Грустненько" width="480" height="640" style="position: relative; left: 0px;">
+            </figure>
+            <figcaption>Когда узнал что Дмитрий Галяудинов умер</figcaption>
 
+            
+        </div>
     </body>
 </html>
