More pages and style improvement

--- a/save-kirill-kreys.html
+++ b/save-kirill-kreys.html
@@ -7,7 +7,7 @@
       name="descpition"
       content="Сайт в память о смерти Дмитрия Галяудина и в поддержку других хороших людей"
     />
-    <title>Зал памяти Дмитрия Галяудина</title>
+    <title>Спасите Кирилла Крейса!</title>
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -42,6 +42,7 @@
       .donate img {
         padding: 1em;
         margin: auto;
+        border-radius: 7%;
       }
       .mail {
         padding-left: 1em;
@@ -69,12 +70,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/"
-                >Главная</a
-              >
+              <a class="nav-link" aria-current="page" href="/">Главная</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="save-kirill-kreys.html"
+              <a class="nav-link active" href="save-kirill-kreys.html"
                 >Спасите Кирилла Крейса!</a
               >
             </li>
@@ -83,43 +82,25 @@
       </div>
     </nav>
     <h2 class="text-center">
-      27 февраля 2024 года в 08:00 в собственной квартире города Полярные Зори
-      умер Галяудинов Дмитрий также известный под псевдонимом Иван Ананас,
-      помним скорбим
+      Этого парня зовут Кирилл Крейс и он зависим от различных накротиков таких
+      как: марихуанна, героин, колеса, лсд. Его друзья не хотят чтобы он умер
+      из-за такого образа жизни.
     </h2>
-    <div class="container my-5">
-      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5">
-        <div class="col">
-          <div class="card">
-            <img src="/photos/photo.png" alt="Дмитрий Галяудин" />
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="/photos/photo2.jpg" alt="Дмитрий Галяудин" />
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="/photos/photo3.jpg" alt="Дмитрий Галяудин" />
-          </div>
-        </div>
-      </div>
-    </div>
-
     <div class="card text-center container donate" style="width: 25rem">
-      <img src="/photos/photoSad.jpg" class="card-img-top" alt="Грустно" />
+      <img
+        src="/photos/KirillKreys.jpg"
+        class="card-img-top"
+        alt="Кирилл Крейс"
+      />
       <div class="card-body">
-        <h5 class="card-title">Близкий друг умершего</h5>
         <p class="card-text">
-          Этот парень был близким другом Дмитрия Галяудина. Чтобы облегчить его
-          страдания хотя бы чуть-чуть вы можете пожертвовать деньги на достойные
-          похороны по кнопке ниже
+          Вы можете пожертвовать деньги ему на лечение по кнопке ниже. Все
+          деньги пойдут на лечение зависимости
         </p>
         <a
           href="https://www.sberbank.com/sms/pbpn?requisiteNumber=79009386959"
-          target="_blank"
           class="btn btn-primary"
+          target="_blank"
           >Пожертвовать</a
         >
       </div>
