--- a/index.html
+++ b/index.html
@@ -88,20 +88,20 @@
       помним скорбим
     </h2>
     <div class="container my-5">
-      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5">
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
         <div class="col">
           <div class="card">
-            <img src="/photos/photo.png" alt="Дмитрий Галяудин" />
+            <img src="/photos/photo.png" alt="Дмитрий Галяудин" height="550" />
           </div>
         </div>
         <div class="col">
           <div class="card">
-            <img src="/photos/photo2.jpg" alt="Дмитрий Галяудин" />
+            <img src="/photos/photo2.jpg" alt="Дмитрий Галяудин" height="550" />
           </div>
         </div>
         <div class="col">
           <div class="card">
-            <img src="/photos/photo3.jpg" alt="Дмитрий Галяудин" />
+            <img src="/photos/photo3.jpg" alt="Дмитрий Галяудин" height="550" />
           </div>
         </div>
       </div>
