--- a/index.html
+++ b/index.html
@@ -108,7 +108,12 @@
     </div>
 
     <div class="card text-center container donate" style="width: 25rem">
-      <img src="/photos/photoSad.jpg" class="card-img-top" alt="Грустно" />
+      <img
+        src="/photos/photoSad.jpg"
+        class="card-img-top"
+        alt="Грустно"
+        height="550"
+      />
       <div class="card-body">
         <h5 class="card-title">Близкий друг умершего</h5>
         <p class="card-text">
