--- a/donate.html
+++ b/donate.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,7 +7,7 @@
       name="descpition"
       content="Сайт в память о смерти Дмитрия Галяудина и в поддержку других хороших людей"
     />
-    <title>Спасите Кирилла Крейса!</title>
+    <title>Пожертвования</title>
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -42,14 +42,15 @@
       .donate img {
         padding: 1em;
         margin: auto;
-        border-radius: 7%;
       }
       .mail {
         padding-left: 1em;
       }
+      .title-margin {
+        margin-top: 1em;
+      }
     </style>
   </head>
-
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
@@ -73,7 +74,7 @@
               <a class="nav-link" aria-current="page" href="/">Главная</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="save-kirill-kreys.html"
+              <a class="nav-link" href="save-kirill-kreys.html"
                 >Спасите Кирилла Крейса!</a
               >
             </li>
@@ -81,24 +82,45 @@
         </div>
       </div>
     </nav>
-    <h2 class="text-center container">
-      Этого парня зовут Кирилл Крейс и он зависим от различных накротиков таких
-      как: марихуанна, героин, колеса, лсд. Его друзья не хотят чтобы он умер
-      из-за такого образа жизни.
+    <h2 class="text-center">
+      На этой странице вы можете пожертвовать деньги на благотворительность
     </h2>
-    <div class="card text-center container donate" style="width: 25rem">
-      <img
-        src="/photos/KirillKreys.jpg"
-        class="card-img-top"
-        alt="Кирилл Крейс"
-      />
+    <div class="card text-center container donate my-3" style="width: 25rem">
       <div class="card-body">
         <p class="card-text">
-          Вы можете пожертвовать деньги ему на лечение по кнопке ниже. Все
-          деньги пойдут на лечение зависимости
+          По кнопке ниже вы можете жертвовать деньги на благотворительность.
+          Просьба указывать в комментарии к переводу кому вы жертвуете деньги.
+          Также вы можете указать свой псевдоним если хотите попасть в топ
+          донатеров.
         </p>
-        <a href="donate.html" class="btn btn-primary">Пожертвовать</a>
+        <a
+          href="https://www.sberbank.com/sms/pbpn?requisiteNumber=79009386959"
+          target="_blank"
+          class="btn btn-primary"
+          >Пожертвовать</a
+        >
       </div>
+    </div>
+    <div>
+      <p class="container text-center" style="font-size: larger">
+        Топ донатеров:
+      </p>
+      <p class="container text-center fw-light" style="font-size: large">
+        Иван Болван: 20 руб
+      </p>
+      <p
+        class="container text-center fw-light text-muted"
+        style="font-size: medium"
+      >
+        Варвара: 10 руб
+      </p>
+      <p
+        class="container text-center fw-light text-muted"
+        style="font-size: medium"
+      >
+        Наркоман: 1 руб
+      </p>
+      <h6 class="container text-center text-muted">Обновляется не сразу!</h6>
     </div>
     <h6 class="fw-light text-muted mail">
       Связаться с нами можно по почте
