--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
       </div>
     </nav>
-    <h2 class="text-center">
+    <h2 class="text-center container">
       27 февраля 2024 года в 08:00 в собственной квартире города Полярные Зори
       умер Галяудинов Дмитрий также известный под псевдонимом Иван Ананас,
       помним скорбим
@@ -121,56 +121,9 @@
           страдания хотя бы чуть-чуть вы можете пожертвовать деньги на достойные
           похороны по кнопке ниже
         </p>
-        <a
-          href="https://www.sberbank.com/sms/pbpn?requisiteNumber=79009386959"
-          target="_blank"
-          class="btn btn-primary"
-          >Пожертвовать</a
-        >
+        <a href="donate.html" class="btn btn-primary">Пожертвовать</a>
       </div>
     </div>
-    <!-- Yandex.Metrika counter -->
-    <script type="text/javascript">
-      (function (m, e, t, r, i, k, a) {
-        m[i] =
-          m[i] ||
-          function () {
-            (m[i].a = m[i].a || []).push(arguments);
-          };
-        m[i].l = 1 * new Date();
-        for (var j = 0; j < document.scripts.length; j++) {
-          if (document.scripts[j].src === r) {
-            return;
-          }
-        }
-        (k = e.createElement(t)),
-          (a = e.getElementsByTagName(t)[0]),
-          (k.async = 1),
-          (k.src = r),
-          a.parentNode.insertBefore(k, a);
-      })(
-        window,
-        document,
-        "script",
-        "https://mc.yandex.ru/metrika/tag.js",
-        "ym"
-      );
-
-      ym(101197913, "init", {
-        clickmap: true,
-        trackLinks: true,
-        accurateTrackBounce: true,
-      });
-    </script>
-    <noscript
-      ><div>
-        <img
-          src="https://mc.yandex.ru/watch/101197913"
-          style="position: absolute; left: -9999px"
-          alt=""
-        /></div
-    ></noscript>
-    <!-- /Yandex.Metrika counter -->
     <h6 class="fw-light text-muted mail">
       Связаться с нами можно по почте
       <a href="mailto:support@hazoveu.ru">support@hazoveu.ru</a>
