--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="save-kirill-kreys.html"
-                >Спасите Кирилла Крейса!</a
+              <a class="nav-link" href="save-kirill-kozlov.html"
+                >Спасите Кирилла Козлова!</a
               >
             </li>
           </ul>
