--- a/save-kirill-kozlov.html
+++ b/save-kirill-kozlov.html
@@ -7,7 +7,7 @@
       name="descpition"
       content="Сайт в память о смерти Дмитрия Галяудина и в поддержку других хороших людей"
     />
-    <title>Спасите Кирилла Крейса!</title>
+    <title>Спасите Кирилла Козлова!</title>
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -74,7 +74,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="save-kirill-kreys.html"
-                >Спасите Кирилла Крейса!</a
+                >Спасите Кирилла Козлова!</a
               >
             </li>
           </ul>
@@ -82,15 +82,15 @@
       </div>
     </nav>
     <h2 class="text-center container">
-      Этого парня зовут Кирилл Крейс и он зависим от различных накротиков таких
+      Этого парня зовут Кирилл Козлов и он зависим от различных накротиков таких
       как: марихуанна, героин, колеса, лсд. Его друзья не хотят чтобы он умер
       из-за такого образа жизни.
     </h2>
     <div class="card text-center container donate" style="width: 25rem">
       <img
-        src="/photos/KirillKreys.jpg"
+        src="/photos/KirillKozlov.jpg"
         class="card-img-top"
-        alt="Кирилл Крейс"
+        alt="Кирилл Козлов"
       />
       <div class="card-body">
         <p class="card-text">
