--- a/donate.html
+++ b/donate.html
@@ -74,8 +74,8 @@
               <a class="nav-link" aria-current="page" href="/">Главная</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="save-kirill-kreys.html"
-                >Спасите Кирилла Крейса!</a
+              <a class="nav-link" href="save-kirill-kozlov.html"
+                >Спасите Кирилла Козлова!</a
               >
             </li>
           </ul>
@@ -112,13 +112,13 @@
         class="container text-center fw-light text-muted"
         style="font-size: medium"
       >
-        Варвара: 10 руб
+        Джесси Пикми: 13,67 руб
       </p>
       <p
         class="container text-center fw-light text-muted"
         style="font-size: medium"
       >
-        Наркоман: 1 руб
+        Варвара: 10 руб
       </p>
       <h6 class="container text-center text-muted">Обновляется не сразу!</h6>
     </div>
