yandex seacrh fix

--- a/donate.html
+++ b/donate.html
@@ -88,7 +88,7 @@
     <div class="card text-center container donate my-3" style="width: 25rem">
       <div class="card-body">
         <p class="card-text">
-          По кнопке ниже вы можете жертвовать деньги на благотворительность.
+          По кнопке ниже вы можете добровольно деньги на благотворительность.
           Просьба указывать в комментарии к переводу кому вы жертвуете деньги.
           Также вы можете указать свой псевдоним если хотите попасть в топ
           донатеров.
