--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
         <h5 class="card-title">Близкий друг умершего</h5>
         <p class="card-text">
           Этот парень был близким другом Дмитрия Галяудина. Чтобы облегчить его
-          страдания хотя бы чуть-чуть вы можете пожертвовать деньги на достойные
-          похороны по кнопке ниже
+          страдания хотя бы чуть-чуть вы можете добровольно пожертвовать деньги
+          на достойные похороны по кнопке ниже
         </p>
         <a href="donate.html" class="btn btn-primary">Пожертвовать</a>
       </div>
