--- a/save-kirill-kozlov.html
+++ b/save-kirill-kozlov.html
@@ -94,8 +94,8 @@
       />
       <div class="card-body">
         <p class="card-text">
-          Вы можете пожертвовать деньги ему на лечение по кнопке ниже. Все
-          деньги пойдут на лечение зависимости
+          Вы можете добровольно пожертвовать деньги ему на лечение по кнопке
+          ниже. Все деньги пойдут на лечение зависимости
         </p>
         <a href="donate.html" class="btn btn-primary">Пожертвовать</a>
       </div>
