бля да когда оно заработает

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="save-kirill-kozlov.html"
+              <a class="nav-link" href="save-kirill-kozlov"
                 >Спасите Кирилла Козлова!</a
               >
             </li>
@@ -121,7 +121,7 @@
           страдания хотя бы чуть-чуть вы можете добровольно пожертвовать деньги
           на достойные похороны по кнопке ниже
         </p>
-        <a href="donate.html" class="btn btn-primary">Пожертвовать</a>
+        <a href="donate" class="btn btn-primary">Пожертвовать</a>
       </div>
     </div>
     <h6 class="fw-light text-muted mail">
