--- a/donate/index.html
+++ b/donate/index.html
@@ -11,21 +11,21 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="favicon/apple-touch-icon.png"
+      href="/favicon/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="favicon/favicon-32x32.png"
+      href="/favicon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="favicon/favicon-16x16.png"
+      href="/favicon/favicon-16x16.png"
     />
-    <link rel="manifest" href="favicon/site.webmanifest" />
+    <link rel="manifest" href="/favicon/site.webmanifest" />
     <link rel="stylesheet" href="/css/main.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
@@ -74,7 +74,7 @@
               <a class="nav-link" aria-current="page" href="/">Главная</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="save-kirill-kozlov"
+              <a class="nav-link" href="/save-kirill-kozlov/"
                 >Спасите Кирилла Козлова!</a
               >
             </li>
