--- a/save-kirill-kozlov/index.html
+++ b/save-kirill-kozlov/index.html
@@ -11,21 +11,21 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="favicon/apple-touch-icon.png"
+      href="/favicon/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="favicon/favicon-32x32.png"
+      href="/favicon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="favicon/favicon-16x16.png"
+      href="/favicon/favicon-16x16.png"
     />
-    <link rel="manifest" href="favicon/site.webmanifest" />
+    <link rel="manifest" href="/favicon/site.webmanifest" />
     <link rel="stylesheet" href="/css/main.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
@@ -97,7 +97,7 @@
           Вы можете добровольно пожертвовать деньги ему на лечение по кнопке
           ниже. Все деньги пойдут на лечение зависимости
         </p>
-        <a href="donate" class="btn btn-primary">Пожертвовать</a>
+        <a href="/donate/" class="btn btn-primary">Пожертвовать</a>
       </div>
     </div>
     <h6 class="fw-light text-muted mail">
