--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
       .mail {
         padding-left: 1em;
       }
+      .disclaimer {
+        color: rgba(0, 0, 0, 0.25) !important;
+      }
     </style>
   </head>
 
@@ -127,6 +130,12 @@
     <h6 class="fw-light text-muted mail">
       Связаться с нами можно по почте
       <a href="mailto:support@hazoveu.ru">support@hazoveu.ru</a>
+    </h6>
+    <h6 class="disclaimer fw-light text-muted mail">
+      Данный сайт является не более чем шуткой. Все люди дали согласие на
+      размещение их фото. Вы все равно можете пожертвовать деньги, они пойдут на
+      нужды и развитие сайта. Сайт не преследует цели кого-либо оскорбить
+      воспринимаете все что здесь размещено как шутку!
     </h6>
   </body>
 </html>
