Антон Хлеб - Тоха Картоха

--- a/donate/index.html
+++ b/donate/index.html
@@ -38,21 +38,6 @@
       integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
       crossorigin="anonymous"
     ></script>
-    <style>
-      .disclaimer {
-        color: rgba(0, 0, 0, 0.25) !important;
-      }
-      .donate img {
-        padding: 1em;
-        margin: auto;
-      }
-      .mail {
-        padding-left: 1em;
-      }
-      .title-margin {
-        margin-top: 1em;
-      }
-    </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -81,11 +66,16 @@
                 >Спасите Кирилла Козлова!</a
               >
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/save-anton-bread"
+                >Помогите Антону Хлебу!</a
+              >
+            </li>
           </ul>
         </div>
       </div>
     </nav>
-    <h2 class="text-center">
+    <h2 class="text-center title-margin">
       На этой странице вы можете пожертвовать деньги на благотворительность
     </h2>
     <div class="card text-center container donate my-3" style="width: 22rem">
@@ -129,7 +119,7 @@
       Связаться с нами можно по почте
       <a href="mailto:support@hazoveu.ru">support@hazoveu.ru</a>
     </h6>
-    <h6 class="disclaimer fw-light text-muted mail">
+    <h6 class="disclaimer fw-light mail">
       Данный сайт является не более чем шуткой. Все люди дали согласие на
       размещение их фото. Вы все равно можете пожертвовать деньги, они пойдут на
       нужды и развитие сайта. Сайт не преследует цели кого-либо оскорбить
