--- a/index.html
+++ b/index.html
@@ -38,18 +38,6 @@
       integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
       crossorigin="anonymous"
     ></script>
-    <style>
-      .donate img {
-        padding: 1em;
-        margin: auto;
-      }
-      .mail {
-        padding-left: 1em;
-      }
-      .disclaimer {
-        color: rgba(0, 0, 0, 0.25) !important;
-      }
-    </style>
   </head>
 
   <body>
@@ -77,15 +65,20 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="save-kirill-kozlov"
+              <a class="nav-link" href="/save-kirill-kozlov"
                 >Спасите Кирилла Козлова!</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/save-anton-bread"
+                >Помогите Антону Хлебу!</a
               >
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    <h2 class="text-center container">
+    <h2 class="text-center container title-margin">
       27 февраля 2024 года в 08:00 в собственной квартире города Полярные Зори
       умер Галяудинов Дмитрий также известный под псевдонимом Иван Ананас,
       помним скорбим
@@ -131,7 +124,7 @@
       Связаться с нами можно по почте
       <a href="mailto:support@hazoveu.ru">support@hazoveu.ru</a>
     </h6>
-    <h6 class="disclaimer fw-light text-muted mail">
+    <h6 class="disclaimer fw-light mail">
       Данный сайт является не более чем шуткой. Все люди дали согласие на
       размещение их фото. Вы все равно можете пожертвовать деньги, они пойдут на
       нужды и развитие сайта. Сайт не преследует цели кого-либо оскорбить
