--- a/save-kirill-kozlov/index.html
+++ b/save-kirill-kozlov/index.html
@@ -38,19 +38,6 @@
       integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
       crossorigin="anonymous"
     ></script>
-    <style>
-      .disclaimer {
-        color: rgba(0, 0, 0, 0.25) !important;
-      }
-      .donate img {
-        padding: 1em;
-        margin: auto;
-        border-radius: 7%;
-      }
-      .mail {
-        padding-left: 1em;
-      }
-    </style>
   </head>
 
   <body>
@@ -80,18 +67,54 @@
                 >Спасите Кирилла Козлова!</a
               >
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/save-anton-bread/"
+                >Помогите Антону Хлебу!</a
+              >
+            </li>
           </ul>
         </div>
       </div>
     </nav>
-    <h2 class="text-center container">
+    <h2 class="text-center container title-margin">
       Этого парня зовут Кирилл Козлов и он зависим от различных накротиков таких
       как: марихуанна, героин, колеса, лсд. Его друзья не хотят чтобы он умер
       из-за такого образа жизни.
     </h2>
+    <div class="container my-5">
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
+        <div class="col">
+          <div class="card">
+            <img
+              src="/photos/KirillKozlov2.jpg"
+              alt="Кирилл Козлов"
+              height="550"
+            />
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img
+              src="/photos/KirillKozlov.jpg"
+              alt="Кирилл Козлов"
+              height="550"
+            />
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img
+              src="/photos/KirillKozlov3.jpg"
+              alt="Кирилл Козлов"
+              height="550"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="card text-center container donate" style="width: 22rem">
       <img
-        src="/photos/KirillKozlov.jpg"
+        src="/photos/KirillKozlovDonate.jpg"
         class="card-img-top"
         alt="Кирилл Козлов"
       />
@@ -107,7 +130,7 @@
       Связаться с нами можно по почте
       <a href="mailto:support@hazoveu.ru">support@hazoveu.ru</a>
     </h6>
-    <h6 class="disclaimer fw-light text-muted mail">
+    <h6 class="disclaimer fw-light mail">
       Данный сайт является не более чем шуткой. Все люди дали согласие на
       размещение их фото. Вы все равно можете пожертвовать деньги, они пойдут на
       нужды и развитие сайта. Сайт не преследует цели кого-либо оскорбить
