--- a/donate/index.html
+++ b/donate/index.html
@@ -38,6 +38,23 @@
       integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
       crossorigin="anonymous"
     ></script>
+    <style>
+      .donate img {
+        padding: 1em;
+        margin: auto;
+      }
+
+      .mail {
+        padding-left: 1em;
+      }
+
+      .disclaimer {
+        color: rgba(0, 0, 0, 0.25) !important;
+      }
+      .title-margin {
+        margin-top: 1em;
+      }
+    </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
