--- a/save-anton-bread/index.html
+++ b/save-anton-bread/index.html
@@ -11,21 +11,21 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="favicon/apple-touch-icon.png"
+      href="/favicon/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="favicon/favicon-32x32.png"
+      href="/favicon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="favicon/favicon-16x16.png"
+      href="/favicon/favicon-16x16.png"
     />
-    <link rel="manifest" href="favicon/site.webmanifest" />
+    <link rel="manifest" href="/favicon/site.webmanifest" />
     <link rel="stylesheet" href="/css/main.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
@@ -38,6 +38,23 @@
       integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
       crossorigin="anonymous"
     ></script>
+    <style>
+      .donate img {
+        padding: 1em;
+        margin: auto;
+      }
+
+      .mail {
+        padding-left: 1em;
+      }
+
+      .disclaimer {
+        color: rgba(0, 0, 0, 0.25) !important;
+      }
+      .title-margin {
+        margin-top: 1em;
+      }
+    </style>
   </head>
 
   <body>
