я не хочу проблем

--- a/donate/index.html
+++ b/donate/index.html
@@ -104,7 +104,7 @@
           донатеров.
         </p>
         <a
-          href="https://www.sberbank.com/sms/pbpn?requisiteNumber=79009386959"
+          href="https://www.donationalerts.com/r/hazoveu"
           target="_blank"
           class="btn btn-primary"
           >Пожертвовать</a
