--- a/donate/index.html
+++ b/donate/index.html
@@ -78,11 +78,11 @@
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="/">Главная</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="/save-kirill-kozlov/"
                 >Спасите Кирилла Козлова!</a
               >
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="/save-anton-bread"
                 >Помогите Антону Хлебу!</a
@@ -99,9 +99,6 @@
       <div class="card-body">
         <p class="card-text">
           По кнопке ниже вы можете добровольно деньги на благотворительность.
-          Просьба указывать в комментарии к переводу кому вы жертвуете деньги.
-          Также вы можете указать свой псевдоним если хотите попасть в топ
-          донатеров.
         </p>
         <a
           href="https://www.donationalerts.com/r/hazoveu"
