--- a/save-anton-bread/index.html
+++ b/save-anton-bread/index.html
@@ -79,11 +79,11 @@
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="/">Главная</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="/save-kirill-kozlov/"
                 >Спасите Кирилла Козлова!</a
               >
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link active" href="/save-anton-bread/"
                 >Помогите Антону Хлебу!</a
