--- a/index.html
+++ b/index.html
@@ -137,6 +137,10 @@
         <a href="donate" class="btn btn-primary">Пожертвовать</a>
       </div>
     </div>
+    <div class="text-center my-5">
+      <p>Песня в поддержку Дмитрия Галяудина</p>
+      <audio src="music.ogg" controls class=""></audio>
+    </div>
     <h6 class="fw-light text-muted mail">
       Связаться с нами можно по почте
       <a href="mailto:support@hazoveu.ru">support@hazoveu.ru</a>
