--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
                 >Главная</a
               >
             </li>
-            <!-- <li class="nav-item">
-            <a class="nav-link" href="/save-kirill-kozlov"
-            >Спасите Кирилла Козлова!</a
-            >
-            </li> -->
+            <li class="nav-item">
+              <a class="nav-link" href="/save-kirill-kozlov"
+                >Спасите Кирилла Козлова!</a
+              >
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="/save-anton-bread"
                 >Помогите Антону Хлебу!</a
