--- a/donate/index.html
+++ b/donate/index.html
@@ -88,6 +88,9 @@
                 >Помогите Антону Хлебу!</a
               >
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/forum">Форум</a>
+            </li>
           </ul>
         </div>
       </div>
