--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
                 >Помогите Антону Хлебу!</a
               >
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/forum">Форум</a>
+            </li>
           </ul>
         </div>
       </div>
