--- a/save-anton-bread/index.html
+++ b/save-anton-bread/index.html
@@ -89,6 +89,9 @@
                 >Помогите Антону Хлебу!</a
               >
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/forum">Форум</a>
+            </li>
           </ul>
         </div>
       </div>
