--- a/save-kirill-kozlov/index.html
+++ b/save-kirill-kozlov/index.html
@@ -90,6 +90,9 @@
                 >Помогите Антону Хлебу!</a
               >
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/forum">Форум</a>
+            </li>
           </ul>
         </div>
       </div>
