--- a/index.html
+++ b/index.html
@@ -186,15 +186,58 @@
       <p>Песня в поддержку Дмитрия Галяудина</p>
       <audio src="music.ogg" controls class=""></audio>
     </div>
+    <div class="accordion" id="accordionExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingOne">
+          <button
+            class="accordion-button collapsed"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#accordionCollapseOne"
+            aria-expanded="false"
+            aria-controls="accordionCollapseOne"
+          >
+            Биография
+          </button>
+        </h2>
+        <div
+          id="accordionCollapseOne"
+          class="accordion-collapse collapse"
+          aria-labelledby="headingOne"
+          data-bs-parent="#accordionExample"
+        >
+          <div class="accordion-body">
+            Дмитрий Галяудинов родился 12.06.2006 в городе Полярные Зори. С
+            раннего детства проявлял интерес к технике и компьютерам. В средней
+            школе участвовал в региональных олимпиадах по математике и
+            информатике, где неоднократно занимал призовые места. После
+            окончания школы в 2023 году поступил в Санкт-Петербургский
+            политехнический университет Петра Великого на факультет
+            информационных технологий. Дмитрий был известен как талантливый, но
+            скромный студент, принимал участие в студенческих хакатонах и
+            научных конференциях, интересовался искусственным интеллектом и
+            разработкой программного обеспечения. Он также увлекался фотографией
+            и писал музыку в жанре эмбиент, выкладывая свои треки на независимых
+            платформах под псевдонимом "dmitr!xg". 27 февраля 2024 года, в 08:00
+            утра, Дмитрий трагически погиб в собственной квартире от инфаркта.
+            Его преждевременная смерть стала неожиданным ударом для друзей,
+            семьи и коллег. Несмотря на свою короткую жизнь, Дмитрий Галяудинов
+            оставил заметный след в сердцах тех, кто его знал. Его помнят как
+            доброго, умного и глубоко думающего человека с редким сочетанием
+            технического таланта и творческой души.
+          </div>
+        </div>
+      </div>
+    </div>
     <h6 class="fw-light text-muted mail">
       Связаться с нами можно по почте
       <a href="mailto:support@hazoveu.ru">support@hazoveu.ru</a>
     </h6>
-    <h6 class="disclaimer fw-light mail">
+    <!-- <h6 class="disclaimer fw-light mail">
       Данный сайт является не более чем шуткой. Все люди дали согласие на
       размещение их фото. Вы все равно можете пожертвовать деньги, они пойдут на
       нужды и развитие сайта. Сайт не преследует цели кого-либо оскорбить
       воспринимаете все что здесь размещено как шутку!
-    </h6>
+    </h6> -->
   </body>
 </html>
