--- a/save-kirill-kozlov/index.html
+++ b/save-kirill-kozlov/index.html
@@ -159,11 +159,11 @@
       Связаться с нами можно по почте
       <a href="mailto:support@hazoveu.ru">support@hazoveu.ru</a>
     </h6>
-    <h6 class="disclaimer fw-light mail">
+    <!-- <h6 class="disclaimer fw-light mail">
       Данный сайт является не более чем шуткой. Все люди дали согласие на
       размещение их фото. Вы все равно можете пожертвовать деньги, они пойдут на
       нужды и развитие сайта. Сайт не преследует цели кого-либо оскорбить
       воспринимаете все что здесь размещено как шутку!
-    </h6>
+    </h6> -->
   </body>
 </html>
